--- a/pkg/server/templates/index.gohtml
+++ b/pkg/server/templates/index.gohtml
@@ -1,9 +1,5 @@
-<html>
-    <head>
-        <title>Netenvelope</title>
-        <link rel="stylesheet" href="static/tailwind.css" />
-    </head>
-    <body class="bg-slate-900 text-slate-100">
-        Hello world
-    </body>
-</html>
+{{ template "layout" }}
+{{ define "title" }}{{end}}
+{{ define "content" }}
+    Hello world
+{{ end }}
