--- a/pkg/server/templates/index.gohtml
+++ b/pkg/server/templates/index.gohtml
@@ -1,5 +1,7 @@
-{{ template "layout" }}
-{{ define "title" }}{{end}}
+{{- /*gotype: github.com/nint8835/netenvelope/pkg/server.globalTemplateContext*/ -}}
+
+{{ template "layout" . }}
+{{ define "title" }}{{ end }}
 {{ define "content" }}
     Hello world
 {{ end }}
