Better login handling; Fixed template context shenanigans
I miss Jinja

--- a/pkg/server/templates/index.gohtml
+++ b/pkg/server/templates/index.gohtml
@@ -1,4 +1,4 @@
-{{- /*gotype: github.com/nint8835/netenvelope/pkg/server.globalTemplateContext*/ -}}
+{{- /*gotype: github.com/nint8835/netenvelope/pkg/server.emptyTemplateContext*/ -}}
 
 {{ template "layout" . }}
 {{ define "title" }}{{ end }}
