--- a/pkg/server/templates/login.gohtml
+++ b/pkg/server/templates/login.gohtml
@@ -1,25 +1,40 @@
-{{ template "layout" }}
+{{- /*gotype: github.com/nint8835/netenvelope/pkg/server.loginPageContext*/ -}}
+
+{{ template "layout" . }}
 {{ define "title" }}{{ " - Login" }}{{ end }}
 {{ define "content" }}
     <div class="flex justify-center">
-        <form action="/login" method="post" class="flex max-w-96 flex-col">
-            <label for="username">Username</label>
-            <input
-                type="text"
-                name="username"
-                required
-                class="mb-4 rounded-md p-2 text-zinc-900 outline-none ring-blue-500 transition-all focus:ring-2"
-            />
+        <form action="/login" method="post" class="flex w-96 max-w-full flex-col">
+            <div class="mb-4 flex flex-col">
+                <label for="username">Username</label>
+                <input
+                    type="text"
+                    name="username"
+                    required
+                    class="rounded-md p-2 text-zinc-900 outline-none ring-blue-500 transition-all focus:ring-2"
+                />
+            </div>
 
-            <label for="password">Password</label>
-            <input
-                type="password"
-                name="password"
-                required
-                class="mb-12 rounded-md p-2 text-zinc-900 outline-none ring-blue-500 transition-all focus:ring-2"
-            />
+            <div class="mb-4 flex flex-col">
+                <label for="password">Password</label>
+                <input
+                    type="password"
+                    name="password"
+                    required
+                    class="rounded-md p-2 text-zinc-900 outline-none ring-blue-500 transition-all focus:ring-2"
+                />
+            </div>
 
-            <button type="submit" class="rounded-md bg-blue-500 py-2 transition-colors hover:bg-blue-600">Login</button>
+            {{ if .Error }}
+                <div class="mb-4 rounded-md border-2 border-red-800 border-opacity-30 bg-red-600 bg-opacity-30 p-2">
+                    {{ .Error }}
+                </div>
+            {{ end }}
+
+
+            <button type="submit" class="mt-8 rounded-md bg-blue-500 py-2 transition-colors hover:bg-blue-600">
+                Login
+            </button>
         </form>
     </div>
 {{ end }}
