--- a/pkg/server/templates/layouts/base.gohtml
+++ b/pkg/server/templates/layouts/base.gohtml
@@ -1,4 +1,4 @@
-{{- /*gotype: github.com/nint8835/netenvelope/pkg/server.emptyTemplateContext*/ -}}
+{{- /*gotype: github.com/nint8835/netenvelope/pkg/server.baseTemplateContext*/ -}}
 
 {{ define "layout" }}
     <html lang="en">
