--- a/pkg/server/templates/layouts/base.gohtml
+++ b/pkg/server/templates/layouts/base.gohtml
@@ -5,7 +5,7 @@
         <head>
             <title>Netenvelope{{ template "title" . }}</title>
             <meta name="viewport" content="width=device-width, initial-scale=1" />
-            <link rel="stylesheet" href="static/tailwind.css" />
+            <link rel="stylesheet" href="/static/tailwind.css" />
             <link
                 rel="icon"
                 href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✉️</text></svg>"
@@ -16,9 +16,9 @@
                 <h1 class="text-2xl"><a href="/">Netenvelope</a></h1>
                 <div>
                     {{ if .Globals.CurrentUser }}
-                        <a class="transition-all hover:text-blue-300" href="/logout">Logout</a>
+                        <a class="transition-all hover:text-blue-500" href="/logout">Logout</a>
                     {{ else }}
-                        <a class="transition-all hover:text-blue-300" href="/login">Login</a>
+                        <a class="transition-all hover:text-blue-500" href="/login">Login</a>
                     {{ end }}
                 </div>
             </div>
