--- a/pkg/server/ui/layout.templ
+++ b/pkg/server/ui/layout.templ
@@ -1,13 +1,14 @@
 package ui
 
 import "github.com/nint8835/netenvelope/pkg/server/ui/utils"
+import "github.com/nint8835/netenvelope/pkg/server/static"
 
 templ Layout(title string) {
 	<html lang="en">
 		<head>
 			<title>Netenvelope{ title }</title>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
-			<link rel="stylesheet" href="/static/tailwind.css"/>
+			<link rel="stylesheet" href={ static.GetStaticPath("tailwind.css") }/>
 			<link
 				rel="icon"
 				href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✉️</text></svg>"
