--- a/pkg/server/ui/pages/vlans.templ
+++ b/pkg/server/ui/pages/vlans.templ
@@ -1,9 +1,33 @@
 package pages
 
+import "fmt"
+import "github.com/nint8835/netenvelope/pkg/database/queries"
 import "github.com/nint8835/netenvelope/pkg/server/ui"
 
-templ Vlans() {
+templ Vlans(vlans []queries.Vlan) {
 	@ui.Layout(" - VLANs") {
-		<div>TODO</div>
+		<ul class="list-inside list-disc">
+			for _, vlan := range vlans {
+				<li>
+					<span>{ fmt.Sprintf("%d", vlan.Tag) }</span>
+					if vlan.Name.Valid {
+						<span>{ fmt.Sprintf(" - %s", vlan.Name.String) }</span>
+					}
+				</li>
+			}
+		</ul>
+		<div class="flex justify-center">
+			<form action="/vlans" method="post" class="flex w-96 max-w-full flex-col">
+				<div class="mb-4 flex flex-col">
+					<label for="tag">Tag</label>
+					<input type="number" name="tag" class="rounded-md p-2 text-zinc-900 outline-none ring-blue-500 transition-all focus:ring-2" required/>
+				</div>
+				<div class="mb-4 flex flex-col">
+					<label for="name">Name</label>
+					<input type="text" class="rounded-md p-2 text-zinc-900 outline-none ring-blue-500 transition-all focus:ring-2" name="name"/>
+				</div>
+				<button type="submit" class="mt-8 rounded-md bg-blue-500 py-2 transition-colors hover:bg-blue-600">Add</button>
+			</form>
+		</div>
 	}
 }
